# CRougeLite

./: .gitignore  CMakeLists.txt  README.md  map_editor.html
docs/: animation-system.md  collision-system.md
src/: CMakeLists.txt  CRougeLite.c  CRougeLite.h  clearResources.c  common.h  defs.h  init.c  structs.h
src/engine/: draw.c  input.c
src/game/: combatAction.c  combatAction.h  debugMenu.c  debugMenu.h  enemy.c  enemy.h  path.c  path.h  player.c  player.h  weapon.c  weapon.h
src/libs/: raygui.h
src/resources/gfx/: atlas.rtpa
src/resources/gfx/assets-prepare/: split.py
src/resources/gfx/map-assets/: mapper  split.py  tiles_merger.py
src/resources/gfx/map-assets/level_one/: level_one_map.csv  merged_file_2.csv
src/resources/sfx/enemies/death/: 751340__qubodup__slime-death.flac
src/resources/sfx/weapons/melee-stick/: 86019__nextmaking__kung-fu-punch.aiff
src/system/: A-Star.c  A-Star.h  anime.c  anime.h  atlas.c  atlas.h  camera.c  camera.h  clearResources.c  collision.c  collision.h  draw.c  draw.h  init.c  init.h  input.c  input.h  map.c  map.h  midpoint.c  midpoint.h  minheap.c  minheap.h  sound.c  sound.h
